[project]
name = "autoclicker"
version = "1.0.0"
description = "A background tool that watches your screen and dismisses OK buttons in desktop applications automatically."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyautogui>=0.9.54",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
autoclicker = "main:main"

[tool.uv]
[tool.hatch.build.targets.wheel]
packages = [ "./",]
